sngcpp20/test/source/0_preprocessor/include_algorithm.cpp.error
error: cannot declare symbol '_Has_ADL_swap_detail' in class scope 'std::_Invoker_functor': C:/work/soulng/sngcpp20/test/source/0_preprocessor/include_algorithm.cpp:13009:
 namespace _Has_ADL_swap_detail {
           ^^^^^^^^^^^^^^^^^^^^  

